@@ -10,6 +10,7 @@ BUG: Ticket#488 - TActiveCustomValidator Is Bypassing My Callback (Wei)
 BUG: Ticket#620 - PRADO should not take over all of Prototype's Callbacks (Wei)
 BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
 BUG: TOutputCache crashes when a default button is set (Qiang)
+BUG: Fixed several typos in TDbCache (Qiang)
 BUG: Fix the bug that <include> tag was ignored in page configurations (Qiang)
 BUG: Ticket#654 - TAssetManager::copyDirectory() do not run closedir on an invalid resource (Knut)
 BUG: Ticket#655 - TAssetManager::publishTarFile() exception for 'assetmanager_tarchecksum_invalid' is not thrown on BSD systems (Knut)
